--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 		<title>Глэйси</title>		
 		<link rel="stylesheet" href="css/normalize.css">
+		<!-- <link rel="stylesheet" href="css/style-min.css"> -->
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body class="body-main-page">	
@@ -58,8 +59,8 @@
 									<div class="form-entrance-controls">
 										<button class="form-entrance-button btn btn-red btn-normal" type="submit" title="Выполнить вход">Войти</button>
 										<div class="form-entrance-link-wrapper vertical">
-											<a class="form-entrance-link" href="#" title="Восстановление забытого пароля">Забыли пароль</a>
-											<a class="form-entrance-link" href="#" title="Новая регистрация">Новая регистрация</a>							
+											<a class="form-entrance-link on-light" href="#" title="Восстановление забытого пароля">Забыли пароль?</a>
+											<a class="form-entrance-link on-light" href="#" title="Новая регистрация">Новая регистрация</a>							
 										</div>
 									</div>				
 								</form>		
@@ -176,7 +177,6 @@
 					</ul>	
 				</section>
 
-			
 				<section class="about inner-marginator">					
 					<h2 class="about-title">Магазин Глэйси - это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h2>					
 					<ul class="about-items">
@@ -186,7 +186,6 @@
 						<li class="about-item">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</li>
 					</ul>	
 				</section>	
-
 			
 				<div class="other inner-marginator">	
 					<article class="other-item-new other-item">				
@@ -207,26 +206,22 @@
 				<h2 class="map-title visually-hidden">Как найти</h2>		
 				<div class="map-info-wrapper map-link" title="Для переключения между обычной и интерактивной картой - двойной щелчок мыши Перемещать и масштабировать карту возможно за пределами ширины контентной области.">			
 					<div class="map-info shadowed">
-						<p class="map-info-p">
-							<span>Адрес главного офиса</span>
-							<span>и офлайн-магазина: </span>
-						</p>		
-						<p class="map-info-p-bold">
-							<span>Ул. Большая Конюшенная</span>
-							<span>19/8, Санкт-Петербург</span>
-						</p>	
-						<p class="map-info-p">Для заказов по телефону:</p>
+						<p class="map-info-p">Адрес главного офиса</p>
+						<p class="map-info-p">и офлайн-магазина: </p>		
+						<p class="map-info-p-bold">Ул. Большая Конюшенная</p>
+						<p class="map-info-p-bold">19/8, Санкт-Петербург</p>						
+						<p class="map-info-p perfect-pixel">Для заказов по телефону:</p>
 						<p class="map-info-p-bold">8 812 450-25-25
-							<span class="perfect-pixel">(c 10 до 20, ежедневно)</span>
-						</p>		
-						<a class="map-info-feedback btn btn-red btn-normal" href="feedback.html">Форма обратной связи</a>
-					</div>			
-				</div> 
-				<div>
-					<img class="map-img map-link map-hide" src="img/map.jpg" width="1200" height="430" alt="Наш магазин на карте (г.Санкт-Петербург, Ул. Большая Конюшенная, 19-8)" title="Для переключения между обычной и интерактивной картой - двойной щелчок мыши Перемещать и масштабировать карту возможно за пределами ширины контентной области.">				 
-					<iframe  class="map-iframe map-link map-show" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037999040354!2d30.322010416394033!3d59.938716271971415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+ul.%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2s!4v1441888483426" width="1200" height="430" title="Для переключения между обычной и интерактивной картой - двойной щелчок мыши Перемещать и масштабировать карту возможно за пределами ширины контентной области." allowfullscreen></iframe>
-				</div>
-			</section>
+							<p class="map-info-p">(c 10 до 20, ежедневно)</p>							
+							<a class="map-info-feedback btn btn-red btn-normal" href="feedback.html">Форма обратной связи</a>
+						</div>			
+					</div> 
+
+					<!--но я за то, чтобы грузить картинку карты видимой, а интерактивная пусть грузится по мере надобности по двойному щелчку-->
+					<img class="map-img map-link map-hide" src="img/map.jpg" width="1200" height="430" alt="Наш магазин на карте (г.Санкт-Петербург, Ул. Большая Конюшенная, 19-8)" >				 
+					<iframe  class="map-iframe map-link map-show" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037999040354!2d30.322010416394033!3d59.938716271971415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+ul.%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2s!4v1441888483426"  allowfullscreen></iframe>		 
+
+				</section>
 
 			<div class="gllacy-wrapper">
 				<footer class="footer inner-marginator">
@@ -260,7 +255,7 @@
 			</div>
 		</div>
 
-		<form class="form-feedback gllacy-form gllacy-flex-hide" id="id-form-feedback"  method="post" action="https://echo.htmlacademy.ru">
+		<form class="form-feedback gllacy-form gllacy-flex-hide" id="id-form-feedback"  method="post" action="https://echo.htmlacademy.ru__">
 			<h2 class="visually-hidden">Форма обратной связи</h2>
 			<button class="form-feedback-close btn-close-large" type="button" title="Закрыть форму обратной связи">
 				<span class="visually-hidden">Закрыть</span>			
@@ -271,9 +266,10 @@
 			<label class="visually-hidden" for="id-feedback-email">Адрес электронной почты</label>
 			<input class="form-feedback-email form-feedback-item gllacy-field" type="email" id="id-feedback-email" placeholder="Ваша почта для ответа?" title="Введите адрес электронной почты" required>		
 			<label class="visually-hidden" for="id-feedback-text">Ваше сообщение</label>
-			<textarea class="form-feedback-text form-feedback-item gllacy-textarea" id="id-feedback-text" rows="8" placeholder="Напишите что-нибудь..." title="Введите текст Вашего сообщения" required></textarea>
+			<textarea class="form-feedback-text form-feedback-item gllacy-textarea" id="id-feedback-text" rows="8" placeholder="Напишите что-нибудь..." title="Введите текст Вашего сообщения"></textarea>
 			<button class="form-feedback-button btn btn-red btn-normal" type="submit" title="Отправить сообщение">Отправить</button>
 		</form>	
 		<script src="js/script.js"></script>
+		<!-- <script src="js/script-min.js"></script> -->
 	</body>
 </html>
