--- a/catalog.html
+++ b/catalog.html
@@ -107,7 +107,7 @@
 					<ul class="breadcrumbs">
 						<li class="breadcrumbs-item"><a class="breadcrumbs-link inline-link on-dark" href="index.html">Главная</a></li>
 						<li class="breadcrumbs-item"><a class="breadcrumbs-link inline-link on-dark" href="#">Каталог</a></li>
-						<li class="breadcrumbs-item"><a class="breadcrumbs-link inline-link on-dark current">Сливочное</a></li>
+						<li class="breadcrumbs-item">Сливочное</li>
 					</ul>
 				</div>
 				<h1 class="page-catalog-title">Сливочное мороженое</h1>	
